3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix parameter for Doxygen, no functional change.
 plugins/common/plugin_common.c
 plugins/common/include/plugin_common.h
Nicolas Weeger 2007-04-09

More API changes.
 server/plugins.c
 plugins/cfpython/cfpython_object.c
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
Nicolas Weeger 2007-04-09

More API changes.
 server/plugins.c
 plugins/cfanim/cfanim.c
 plugins/cfpython/cfpython_object.c
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
Nicolas Weeger 2007-04-09

More API changes.
 server/plugins.c
 plugins/cflogger/include/cflogger_proto.h: remove plugin_common functions.
 plugins/cfpython/cfpython_object.c
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
Nicolas Weeger 2007-04-08

Have create_pathname() return buf to simplify code.
 common/map.c
 include/libproto.h
Nicolas Weeger 2007-04-08

Remove unused function.
 include/sproto.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 plugins/cfpython/cfpython_object.c
 server/plugins.c
Nicolas Weeger 2007-04-08

Map-property type checking. Remove some unused void* return values.
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 server/plugins.c
Nicolas Weeger 2007-04-08

Change map plugin API to not use static vars. Remove old hooks (replaced by other means).
 include/plugin.h sproto.h
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
 plugins/cfpython/cfpython_map.c
 plugins/cfpython/cfpython.c
 plugins/cfnewspaper/cfnewspaper.c
 server/plugins.c
Nicolas Weeger 2007-04-08
